cmake_minimum_required(VERSION 3.13)
project(Assignment2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment2 main.cpp Const.cpp Const.h Item.cpp Item.h Node.cpp Node.h Queue.h Queue.cpp priorityQueue.cpp priorityQueue.h Patient.cpp Patient.h Const.h EmergencyDepartment.cpp EmergencyDepartment.h Admission.cpp Admission.h Station.cpp Station.h Arrival.cpp Arrival.h Event.cpp Event.h BloodLab.cpp BloodLab.h TreatmentRoom.cpp TreatmentRoom.h Discharge.cpp Discharge.h CompleteAssessment.cpp CompleteAssessment.h StartAssessment.cpp StartAssessment.h Xray.cpp Xray.h StartXray.cpp StartXray.h StartBloodWork.cpp StartBloodWork.h StartTreatment.cpp StartTreatment.h CompleteXray.cpp CompleteXray.h CompleteBloodWork.cpp CompleteBloodWork.h)